--- a/docs-book/master_middleman/source/subnavs/aws-labs-service-broker_subnav.erb
+++ b/docs-book/master_middleman/source/subnavs/aws-labs-service-broker_subnav.erb
@@ -6,7 +6,7 @@
     <ul>
 
       <li>
-        <a id='home-nav-link' href="/aws-labs-service-broker/index.html">YOUR-PRODUCT-NAME</a>
+        <a id='home-nav-link' href="/aws-labs-service-broker/index.html">AWS Service Broker for VMware Tanzu</a>
       </li>
 
       <li>
@@ -14,11 +14,11 @@
       </li>
 
       <li>
-        <a href="/aws-labs-service-broker/installing.html">Installing and Configuring YOUR-PRODUCT-NAME</a>
+        <a href="/aws-labs-service-broker/installing.html">Installing and Configuring AWS Service Broker for VMware Tanzu</a>
       </li>
 
       <li>
-        <a href="/aws-labs-service-broker/using.html">Using YOUR-PRODUCT-NAME</a>
+        <a href="/aws-labs-service-broker/using.html">Using AWS Service Broker for VMware Tanzu</a>
       </li>
 
     </ul>
