--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -30,11 +30,11 @@ The following table provides version and version-support information about AWS S
     <th>Details</th>
     <tr>
         <td>Tile version</td>
-        <td>v1.0.1</td>
+        <td>v1.0.2</td>
     </tr>
     <tr>
         <td>Release date</td>
-        <td>May 31, 2019</td>
+        <td>June 22, 2020</td>
     </tr>
     <tr>
         <td>Software component version</td>
@@ -42,11 +42,11 @@ The following table provides version and version-support information about AWS S
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
-        <td>2.9, 2.8, 2.7, 2.6, 2.5, 2.4, 2.3, 2.2, and 2.1</td>
+        <td>2.9, 2.8, 2.7, and 2.6</td>
     </tr>
     <tr>
         <td>Compatible Tanzu Application Service version(s)</td>
-        <td>2.9, 2.8, 2.7, 2.6, 2.5, 2.4, 2.3, 2.2, and 2.1</td>
+        <td>2.9, 2.8, 2.7, and 2.6</td>
     </tr>
         <tr>
         <td>Compatible Tanzu Application Service for Windows version(s)</td>
@@ -54,7 +54,7 @@ The following table provides version and version-support information about AWS S
     </tr>
     <tr>
        <td>BOSH stemcell version</td>
-       <td>Xenial 250.X</td>
+       <td>Ubuntu Xenial 621.x</td>
     </tr>
     <tr>
         <td>IaaS support</td>
@@ -67,7 +67,8 @@ The following table provides version and version-support information about AWS S
 
 AWS Service Broker for VMware Tanzu has the following requirements:
 
-+ An foundation running in AWS.
++ A foundation running Tanzu Application Service for VMs.
++ An AWS account to create services in.
 
 ## <a id="limitations"></a>Limitations
 
