--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -15,8 +15,7 @@ This topic describes how to install and configure AWS Service Broker for VMware 
 
 #### Automated setup
 
-Prerequisites can be easily setup using a CloudFormation template available [here](/setup/prerequisites.yaml). Stack 
-outputs provide the needed resource names for broker configuration.
+Prerequisites can be easily setup using a CloudFormation template available [here](https://github.com/awslabs/aws-servicebroker/blob/master/setup/prerequisites.yaml). Stack outputs provide the needed resource names for broker configuration.
 
 #### Manual setup
 
