--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -5,11 +5,11 @@ owner:
 
 <strong><%= modified_date %></strong>
 
-This documentation describes the AWS Service Broker for VMware Tanzu. The AWS Service Broker for VMware Tanzu enables developers to create, provision, and bind 26 AWS native services for use with their applications.
+This documentation describes the AWS Service Broker for VMware Tanzu. The AWS Service Broker for VMware Tanzu enables developers to create, provision, and bind 26 AWS native services for use with their apps.
 
 ## <a id='overview'></a>Overview
 
-The AWS Service Broker for VMware Tanzu allows native AWS services to be exposed directly through application platforms that implement the Open Service Broker API, and provides simple integration of AWS Services directly within the application platform.
+The AWS Service Broker for VMware Tanzu allows native AWS services to be exposed directly through application platforms that implement the Open Service Broker API, and provides integration of AWS Services directly within the application platform.
 
 ## <a id='features'></a>Key Features
 
@@ -42,15 +42,11 @@ The following table provides version and version-support information about AWS S
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
-        <td>2.9, 2.8, 2.7, and 2.6</td>
+        <td>2.6.x, 2.7.x, 2.8.x, 2.9.x</td>
     </tr>
     <tr>
         <td>Compatible Tanzu Application Service version(s)</td>
-        <td>2.9, 2.8, 2.7, and 2.6</td>
-    </tr>
-        <tr>
-        <td>Compatible Tanzu Application Service for Windows version(s)</td>
-        <td>N/A</td>
+        <td>2.6.x, 2.7.x, 2.8.x, 2.9.x</td>
     </tr>
     <tr>
        <td>BOSH stemcell version</td>
@@ -76,8 +72,4 @@ AWS Service Broker for VMware Tanzu has the following requirements:
 
 ## <a id="feedback"></a>Feedback
 
-If you have a feature request, questions, or information about an issue, please raise an issue on GitHub at the following location: https://github.com/awslabs/aws-servicebroker/issues.
-
-## <a id='license'></a>License
-
-
+If you have a feature request, questions, or information about an issue, raise an issue on GitHub at the following location: https://github.com/awslabs/aws-servicebroker/issues.
