Add subnav and toc achors

--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -7,19 +7,17 @@ owner: Partners
 
 This topic describes how to install and configure AWS Service Broker for VMware Tanzu.
 
-#<a id='install'></a> Install and Configure AWS Service Broker for VMware Tanzu
+##<a id="prereqs"></a> Prerequisites
 
-## Prerequisites
+### <a id="dynamodb-table"></a>DynamoDB Table
 
-### DynamoDB Table
+#### Automated Setup
 
-#### Automated setup
-
-Prerequisites can be setup using a CloudFormation template available [at Github](https://github.com/awslabs/aws-servicebroker/blob/master/setup/prerequisites.yaml). Stack outputs provide the needed resource names for broker configuration.
+Prerequisites are setup using a CloudFormation template available [at Github<%# The brand name is "GitHub". %>](https://github.com/awslabs/aws-servicebroker/blob/master/setup/prerequisites.yaml). Stack outputs provide the needed resource names for broker configuration.<%# Type "in GitHub" somewhere in the cross-reference sentence. %>
 
 #### Manual setup
 
-Table can be created with the following aws cli command:
+Table can be<%# Consider switching to active voice. %> created with the following aws cli command:
 
 ```bash
 aws dynamodb create-table --attribute-definitions \
@@ -33,9 +31,9 @@ AttributeName=userid,KeyType=RANGE --global-secondary-indexes \
 
 You can customize the table name as needed and pass in your table name using –tableName
 
-### IAM
+###<a id="iam"></a> IAM
 
-By default the broker will use the same credentials for provisioning ServiceInstances and for broker operations like
+By default the broker will<%# Avoid "will": present tense is preferred. %> use the same credentials for provisioning ServiceInstances and for broker operations like
 fetching the catalog and reading/writing metadata to DynamoDB.
 
 The user or role that the broker runs as requires the following policy:
@@ -79,9 +77,14 @@ The user or role that the broker runs as requires the following policy:
 }
 ```
 
-| **NOTE:** replace the `<REGION>`, `<ACCOUNT_ID>` and `<TABLE_NAME>` placeholders in the above json before creating the policy
+<p class="note"><strong>Note:</strong> replace the <code>&lt;REGION></code>, <code>&lt;ACCOUNT_ID></code> and
+  <code>&lt;TABLE_NAME></code> placeholders
+   in the above json before creating the policy.
+</p>
 
-The role/user used for provisioning requires additional permissions for provisioning, binding and deprovisioning ServiceInstances. By default this is the same user/role as the broker role, so can be added to that, or can be applied to a separate role, see [Managing Resources Via Assumed Role](/docs/README.md#managing-resources-via-assumed-role).
+The role/user used for provisioning requires additional permissions for provisioning, binding and
+deprovisioning ServiceInstances.
+By default, this is the same user/role as the broker role, so can be<%# Consider switching to active voice. %> added to that, or can be<%# Consider switching to active voice. %> applied to a separate role, see [Managing Resources Via Assumed Role](/docs<%# "documentation" is preferred. %>/README.md#managing-resources-via<%# "through", "using" and "by means of" are preferred. %>-assumed-role).
 
 ```json
 {
@@ -142,22 +145,23 @@ The role/user used for provisioning requires additional permissions for provisio
 }
 ```
 
+
 | **NOTE:** replace the `<REGION>` and `<ACCOUNT_ID>` placeholders in the above json before creating the policy
 
-If a custom catalog is published, this policy may need to be adapted.
+If a custom catalog is published, this policy may<%# "can" usually works better. Use "might" to convey possibility. %> need to be adapted.
 
-## Installation
+##<a id="installation"></a> Installation
 
 * Download the latest tile from the Tanzu Network
-* Login to Ops Manager and import the tile
+* Login to<%# "Log in to" is preferred. %> Ops Manager<%# Use <%= vars.ops_manager %> and import the tile
 * Complete configuration in the `AWS Service Broker Configuration` section. Take note of the following fields:
   * `Broker ID` - An ID to use for partitioning broker data in DynamoDb. if multiple brokers are used in the same AWS account, this value must be unique per broker. This is a customer selected string.
   * `AWS Access Key ID` and `AWS Secret Access` (_**REQUIRED**_) -  Specify the credentials for the user created in the prerequisites section of this guide. If you are using an ec2 instance role attached to the broker hosts, leave these fields blank.
-  * `Target AWS Account ID` and `Target IAM Role Name` - if you would like to provision into a different account, or use a
+  * `Target AWS Account ID` and `Target IAM Role Name` - if you would<%# Re-phrase for present tense if possible. %> like to provision into a different account, or use a
   different role for provisioning, populate these with the account and role details. The role specified must allow the
   broker user/role to assume it
   * `AWS Region ` - this is the default region for the broker to deploy services into, and must match the region that the
-  DynamoDB table created in the prerequisisites section of this guide was created in (this will be decoupled in an upcoming update).
+  DynamoDB table created in the prerequisisites section of this guide was created in (this will<%# Avoid "will": present tense is preferred. %> be decoupled in an upcoming update).
   * `Amazon S3 Bucket` - specify `awsservicebroker`
   * `Amazon S3 Key Prefix` - specify `templates/latest/`
   * `Amazon S3 Region` - specify `us-east-1`
