Fix broken cross-refs

--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -89,7 +89,9 @@ The user or role that the broker runs as requires the following policy:
 
 The role/user used for provisioning requires additional permissions for provisioning, binding and
 deprovisioning ServiceInstances.
-By default, this is the same user/role as the broker role, so add to that, or apply to a separate role, see [Managing Resources Via Assumed Role](/docs/README.md#managing-resources-via-assumed-role).
+By default, this is the same user/role as the broker role, so add to that,
+or apply to a separate role,
+see [Managing Resources Via Assumed Role](installing.html#managing-resources-via-assumed-role).
 
 ```json
 {
