--- a/docs-content/using.html.md.erb
+++ b/docs-content/using.html.md.erb
@@ -230,7 +230,7 @@ You can configure the broker to point to your own S3 bucket (which can be privat
 CloudFormation templates and ServiceClass specs. The bucket, prefix and AWS region that the broker scans for ServiceClasses is configured using the
 `-s3Bucket`, `-s3Key` and `-s3Region` commandline switches.
 
-* [Example -spec.yaml file](/docs/examples/example-main.yaml)
+* [Example -spec.yaml file](https://github.com/awslabs/aws-servicebroker/blob/master/docs/examples/example-main.yaml)
 
 ### Template Metadata Generator
 
