--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -9,10 +9,10 @@ This topic describes how to install and configure AWS Service Broker for VMware 
 
 ##<a id="prereqs"></a> Prerequisites
 
-Before you install AWS Service Broker for VMware Tanzu, you must have:
+Before you install AWS Service Broker for VMware Tanzu, you must:
 
 * Setup a DynamoDB Table.
-* Prerequisite. See [Link]().
+* Setup Identity and Access Management.
 
 ### <a id="dynamodb-table"></a>DynamoDB Table
 
