--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Release Notes for YOUR-PRODUCT-NAME
+title: Release Notes for AWS Service Broker for VMware Tanzu
 owner: Partners
 ---
 
