Update release notes

--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -5,6 +5,15 @@ owner: Partners
 
 <strong><%= modified_date %></strong>
 
+##<a id="ver"></a> v1.0.3
+
+**Release Date:** June 16, 2021
+
+Features included in this release:
+
+* Latest Release on Tanzu Network
+
+
 ##<a id="ver"></a> v1.0.2
 
 **Release Date:** July 15, 2020
