--- a/docs-content/using.html.md.erb
+++ b/docs-content/using.html.md.erb
@@ -7,7 +7,7 @@ owner:
 
 This topic describes how to use AWS Service Broker for VMware Tanzu.
 
-![Illustrates how application platforms can use the broker to provision and bind to AWS services.](/images/architecture.png)
+![Illustrates how application platforms can use the broker to provision and bind to AWS services.](./images/architecture.png)
 
 ##<a id="provision-bind"></a> Provisioning and Binding Services
 
@@ -47,7 +47,7 @@ Parameters:
   aws_secret_key: abcdabcdabcdabcdabcdabcdabcdabcd
 ```
 
-###<a id="manage-resources-via-role"></a> Managing Resources via Assumed Role
+###<a id="manage-resources-via-role"></a> Managing Resources via
 
 The aws-service-broker has the ability to assume a role for all resources it manages.
 
