Add missing word

--- a/docs-content/using.html.md.erb
+++ b/docs-content/using.html.md.erb
@@ -47,7 +47,7 @@ Parameters:
   aws_secret_key: abcdabcdabcdabcdabcdabcdabcdabcd
 ```
 
-###<a id="manage-resources-via-role"></a> Managing Resources via
+###<a id="manage-resources-via-role"></a> Managing Resources via Assumed Role
 
 The aws-service-broker has the ability to assume a role for all resources it manages.
 
